Fixed opening session files that contaimn percent files.
git-svn-id: http://chianti.ucsd.edu/svn@20874 0ecc0d97-ab19-0410-9704-bfe1a75892f5