@@ -454,8 +454,9 @@ public class CytoscapeInit {
 				} else {
 					Cytoscape.setCurrentSessionFileName(sessionFile);
 
-					File shortName = new File(sessionFile);
-					URL sessionURL = shortName.toURL();
+					final File shortName = new File(sessionFile);
+					final String absolutePath = shortName.getAbsolutePath();
+					final URL sessionURL = new URL("file://" + escapePercentSign(absolutePath));
 					reader = new CytoscapeSessionReader(sessionURL);
 					sessionName = shortName.getName();
 				}
@@ -475,6 +476,21 @@ public class CytoscapeInit {
 		}
 
 		return false;
+	}
+
+	/**
+	 *  @return 
+	 */
+	private String escapePercentSign(final String rawString) {
+		final StringBuilder cookedString = new StringBuilder(rawString.length());
+		for (int i = 0; i < rawString.length(); ++i) {
+			final char ch = rawString.charAt(i);
+			if (ch == '%')
+				cookedString.append("%25");
+			else
+				cookedString.append(ch);
+		}
+		return cookedString.toString();
 	}
 
 	private static void initProperties() {
